# zed-context-manipulator

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  apply-prune-all-images.sh  apply-prune-and-vacuum.sh  apply-prune.sh  backup-zed-threads.sh  dry-run-one-thread.sh  dry-run-prune.sh  prune_zed_read_file_images.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lint.yml  publish.yml
zed_context_manipulator/: __init__.py  __main__.py  cli.py  database.py  filters.py  operations.py  threadmodel.py  tui.py
