[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-context-manipulator"
version = "1.0.0"
description = "Search, filter, edit, and prune Zed agent conversation threads"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{ name = "Luke Andrew Simmons" }]
keywords = ["zed", "agent", "llm", "sqlite", "tui", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.15",
]

[project.urls]
Homepage = "https://github.com/Skyluker4/zed-context-manipulator"
Repository = "https://github.com/Skyluker4/zed-context-manipulator"
Issues = "https://github.com/Skyluker4/zed-context-manipulator/issues"

[project.scripts]
zed-context-manipulator = "zed_context_manipulator.cli:main"
zcm = "zed_context_manipulator.cli:main"

[tool.setuptools]
packages = ["zed_context_manipulator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
